add chaground image to menu

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -5,7 +5,9 @@ footer{
 .header-top{
     display: none;
 }
-
+.full-container{
+    background-image: url('/images/menu-background.png');
+}
 .text-block span{
     margin-top: 0;
     display: block;
