--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -431,13 +431,13 @@
             <li><a href="https://www.facebook.com" target="_blank">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a></li>
-            <li><a href="#">
+            <li><a href="https://twitter.com/">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a></li>
-            <li><a href="#">
+            <li><a href="https://plus.google.com">
                 <ion-icon name="logo-googleplus"></ion-icon>
               </a></li>
-            <li><a href="#">
+            <li><a href="https://www.instagram.com/">
                 <ion-icon name="logo-instagram"></ion-icon>
               </a></li>
           </ul>
